--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,9 +5,9 @@ original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
 theme: cc-prototype
 duration: 1 # 1, 2 or 3
 listed: false
-ingredient: false
+ingredient: true
 interests: ""
-technologies: ""
+technologies: "python"
 steps:
   - title: Store and use functions in dictionaries
 
