--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,9 +1,9 @@
 title: Storing functions in Python dictionaries
 hero_image: images/banner.png
 description: Store and use functions in dictionaries
-original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
+original_url:
 theme: cc-prototype
-duration: 1 # 1, 2 or 3
+duration: 1
 listed: false
 ingredient: true
 interests: ""
