--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Using functions in dictionaries
 hero_image: images/banner.png
-description: python-advanced-dictionaries description
+description: How to combine dictionaries and functions in Python
 original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
 theme: cc-prototype
 published: false
